# python-project-52

./: .codeclimate.yml  .coveragerc  .gitignore  .gitingore  Makefile  README.md  build.sh  pyproject.toml  setup.cfg
.github/workflows/: my_workflow.yaml
docker/: compose.yml
task_manager/: access_mixins.py  forms.py  mixins.py  settings.py  urls.py  validators.py  view_mixins.py  views.py
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py  0003_alter_label_options.py  0004_alter_label_name.py  0005_alter_label_name.py
task_manager/labels/tests/: test_forms.py  test_urls.py  test_views.py
task_manager/static/my_styles/: my_styles.css
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py  0003_alter_status_options.py  0004_alter_status_name.py  0005_alter_status_name.py
task_manager/statuses/tests/: test_forms.py  test_urls.py  test_views.py
task_manager/tasks/: __init__.py  filters.py  forms.py  mixins.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_description_alter_task_executor.py  0002_initial.py  0003_alter_task_description_alter_task_executor.py  0004_alter_task_labels.py  (+9 more)
task_manager/templates/: 404.html  index.html  layout.html  login.html  navbar.html  paginate.html
task_manager/templatetags/: table_sort.py
task_manager/users/: forms.py  mixins.py  models.py  urls.py  views.py
taskman_docker/: compose.yml
(+52 files in other folders)
