[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["dmkael <tanmaar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.1.0"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
gunicorn = "^22.0.0"
uvicorn = "^0.29.0"
django-bootstrap5 = "^24.2"
django-tz-detect = "^0.5.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
flake8 = "^7.0.0"
django-extensions = "^3.2.3"
ipython = "^8.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
